cpp09/ex02/out
In file included from TPmergeMe.hpp:26,
                 from main.cpp:54:
TPmergeMe.tpp: In instantiation of ‘void PmergeMe<T>::insertalgorithm(T&, T&, int) [with T = std::vector<int>]’:
TPmergeMe.tpp:123:2:   required from ‘void PmergeMe<T>::make_main_chain(int) [with T = std::vector<int>]’
TPmergeMe.tpp:149:3:   required from ‘void PmergeMe<T>::sortContainer(int) [with T = std::vector<int>]’
TPmergeMe.tpp:167:2:   required from ‘PmergeMe<T>::PmergeMe(int, char**, T, std::string) [with T = std::vector<int>; std::string = std::__cxx11::basic_string<char>]’
main.cpp:70:78:   required from here
TPmergeMe.tpp:84:66: error: no matching function for call to ‘PmergeMe<std::vector<int> >::findInsertionIndex(std::vector<int>&, int&, std::vector<int>::iterator&, int&)’
   84 |                         int insert_block_idx = findInsertionIndex(main_chain, *bn, pos, block_size);
      |                                                ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
TPmergeMe.tpp:36:5: note: candidate: ‘int PmergeMe<T>::findInsertionIndex(int, typename T::iterator, int) [with T = std::vector<int>; typename T::iterator = std::vector<int>::iterator]’
   36 | int PmergeMe< T >::findInsertionIndex(int target, typename T::iterator right_it, int block_size)
      |     ^~~~~~~~~~~~~
TPmergeMe.tpp:36:5: note:   candidate expects 3 arguments, 4 provided
TPmergeMe.tpp: In instantiation of ‘void PmergeMe<T>::insertalgorithm(T&, T&, int) [with T = std::__cxx11::list<int>]’:
TPmergeMe.tpp:123:2:   required from ‘void PmergeMe<T>::make_main_chain(int) [with T = std::__cxx11::list<int>]’
TPmergeMe.tpp:149:3:   required from ‘void PmergeMe<T>::sortContainer(int) [with T = std::__cxx11::list<int>]’
TPmergeMe.tpp:167:2:   required from ‘PmergeMe<T>::PmergeMe(int, char**, T, std::string) [with T = std::__cxx11::list<int>; std::string = std::__cxx11::basic_string<char>]’
main.cpp:71:73:   required from here
TPmergeMe.tpp:84:66: error: no matching function for call to ‘PmergeMe<std::__cxx11::list<int> >::findInsertionIndex(std::__cxx11::list<int>&, int&, std::__cxx11::list<int>::iterator&, int&)’
   84 |                         int insert_block_idx = findInsertionIndex(main_chain, *bn, pos, block_size);
      |                                                ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
TPmergeMe.tpp:36:5: note: candidate: ‘int PmergeMe<T>::findInsertionIndex(int, typename T::iterator, int) [with T = std::__cxx11::list<int>; typename T::iterator = std::__cxx11::list<int>::iterator]’
   36 | int PmergeMe< T >::findInsertionIndex(int target, typename T::iterator right_it, int block_size)
      |     ^~~~~~~~~~~~~
TPmergeMe.tpp:36:5: note:   candidate expects 3 arguments, 4 provided
make: *** [Makefile:17: main.o] Error 1
